@@ -1,8 +1,8 @@
 Package: rcicr
 Type: Package
-Title: Reverse correlation image classification toolbox
-Version: 0.3.0
-Date: 2014-12-18
+Title: Reverse-Correlation Image-Classification Toolbox
+Version: 0.3.1
+Date: 2015-01-23
 URL: http://ron.dotsch.org/rcicr
 Author: Ron Dotsch <rdotsch@gmail.com>
 Maintainer: Ron Dotsch <rdotsch@gmail.com>
