@@ -1,9 +1,11 @@
 # Generated by roxygen2 (4.0.1): do not edit by hand
 
 export(autoscale)
+export(batchGenerateCI)
 export(batchGenerateCI2IFC)
 export(generateCI)
 export(generateCI2IFC)
+export(generateCINoise)
 export(generateNoiseImage)
 export(generateNoisePattern)
 export(generateSinusoid)
