@@ -1,3 +1,11 @@
+Changes from 0.3.0-29 to 0.3.1-20 [18-Mar-2015]
+
+* Added batchGenerateCI to deal with data from any reverse correlation task that does not use inverse noise. This function can be used for a 1IFC, 2IFC with independently generated stimuli, 3IFC, etc. 
+* Renamed generateCI2IFC to generateCI and moved it to rcicr.R as it is a general function, and not just for 2IFC reverse correlation tasks
+* Created genreateCI2IFC wrapper function (wraps generateCI) for backwards compatibility
+* Renamed old generateCI to generateCINoise to differentiate between generateCI and generateCINoise
+* Updated title and description of rcicr for CRAN
+
 Changes from 0.2.6-28 to 0.3.0-29 [23-Jan-2015]
 
 * Bugfix in generateNoisePattern: sinIdx counted from 0-4091 instead of 1-4092. This means one single sinus in a sinusoid patch in the highest spatial frequency in one of the corners of stimuli and one single sinus in a sinusoid patch in the lowest spatial frequency was fixed in contrast. You can use version 0.3.0 to perform your analysis of data collected with stimuli generated pre 0.3.0. It will conduct the analysis as pre 0.3.0 versions of rcicr would have done. Stimuli generated with version 0.3.0 and up do not have this problem and will automatically be analyzed correctly.
